[package]
name = "errno-dragonfly"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
description = "Exposes errno functionality to stable Rust on DragonFlyBSD"
license = "MIT"
repository = "https://github.com/mneumann/errno-dragonfly-rs"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
